--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-dj-database-url==0.4.1
 Django==1.9.5
 Pillow==3.2.0
-whitenoise==3.0
+dj-database-url==0.4.0
+gunicorn==19.4.5
+psycopg2==2.6.1
+whitenoise==2.0.6
